# docmind-ai

./: .gitignore  README.md  main.py  pyproject.toml
app/api/: document.py  embedding.py
app/core/: config.py
app/embeddings/: base.py  ollama_embedding_service.py
app/services/: document_service.py
app/utils/: pdf_processor.py
