[project]
name = "docmind-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.138.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "ollama>=0.6.2",
    "passlib>=1.7.4",
    "pypdf>=6.14.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
